# murf-mcp

./: .gitignore  README.md  claude-setup.py  installation.py  pyproject.toml
.github/: publish.yml
.github/workflows/: publish.yml
src/: server.py
