[project]
name = "murf-mcp"
version = "0.1.0"
description = "The Murf MCP Server offers seamless integration with MCP clients like [Claude Desktop](https://claude.ai/download), enabling developers and creators to convert text into lifelike speech effortlessly. With over 130 natural-sounding voices across 13+ languages and 20+ speaking styles, Murf provides unparalleled speech customization for a wide range of applications." 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "murf>=1.0.2",
    "pydub>=0.25.1",
    "rapidfuzz>=3.13.0",
]


[project.scripts]
murf-mcp = "src.server:main"
